config webpack for project

--- a/.gitignore
+++ b/.gitignore
@@ -10159,3 +10159,31 @@ node_modules/yallist/LICENSE
 node_modules/yallist/package.json
 node_modules/yallist/README.md
 node_modules/yallist/yallist.js
+node_modules/@jest/types/node_modules/color-name/index.js
+node_modules/@jest/types/node_modules/color-name/LICENSE
+node_modules/@jest/types/node_modules/color-name/package.json
+node_modules/@jest/types/node_modules/color-name/README.md
+node_modules/color-name/.eslintrc.json
+node_modules/color-name/.npmignore
+node_modules/color-name/test.js
+node_modules/glob-parent/CHANGELOG.md
+node_modules/globby/node_modules/pify/index.js
+node_modules/globby/node_modules/pify/license
+node_modules/globby/node_modules/pify/package.json
+node_modules/globby/node_modules/pify/readme.md
+node_modules/jest-util/node_modules/color-name/index.js
+node_modules/jest-util/node_modules/color-name/LICENSE
+node_modules/jest-util/node_modules/color-name/package.json
+node_modules/jest-util/node_modules/color-name/README.md
+node_modules/read-cache/node_modules/pify/index.js
+node_modules/read-cache/node_modules/pify/license
+node_modules/read-cache/node_modules/pify/package.json
+node_modules/read-cache/node_modules/pify/readme.md
+node_modules/tailwindcss/node_modules/color-name/index.js
+node_modules/tailwindcss/node_modules/color-name/LICENSE
+node_modules/tailwindcss/node_modules/color-name/package.json
+node_modules/tailwindcss/node_modules/color-name/README.md
+node_modules/tailwindcss/node_modules/glob-parent/index.js
+node_modules/tailwindcss/node_modules/glob-parent/LICENSE
+node_modules/tailwindcss/node_modules/glob-parent/package.json
+node_modules/tailwindcss/node_modules/glob-parent/README.md
