--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tailwind-watch": "npx tailwindcss -i ./src/css/input.css -o ./src/css/main.css --watch",
+    "watch": "npx tailwindcss -i ./src/css/input.css -o ./src/css/main.css --watch",
     "build": "webpack"
   },
   "keywords": [],
@@ -20,6 +20,8 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.2.7",
     "terser-webpack-plugin": "^5.3.6",
