--- a/.gitignore
+++ b/.gitignore
@@ -10187,3 +10187,70 @@ node_modules/tailwindcss/node_modules/glob-parent/index.js
 node_modules/tailwindcss/node_modules/glob-parent/LICENSE
 node_modules/tailwindcss/node_modules/glob-parent/package.json
 node_modules/tailwindcss/node_modules/glob-parent/README.md
+node_modules/.bin/prettier
+node_modules/.bin/prettier.cmd
+node_modules/.bin/prettier.ps1
+node_modules/prettier/bin-prettier.js
+node_modules/prettier/cli.js
+node_modules/prettier/doc.js
+node_modules/prettier/index.js
+node_modules/prettier/LICENSE
+node_modules/prettier/package.json
+node_modules/prettier/parser-angular.js
+node_modules/prettier/parser-babel.js
+node_modules/prettier/parser-espree.js
+node_modules/prettier/parser-flow.js
+node_modules/prettier/parser-glimmer.js
+node_modules/prettier/parser-graphql.js
+node_modules/prettier/parser-html.js
+node_modules/prettier/parser-markdown.js
+node_modules/prettier/parser-meriyah.js
+node_modules/prettier/parser-postcss.js
+node_modules/prettier/parser-typescript.js
+node_modules/prettier/parser-yaml.js
+node_modules/prettier/README.md
+node_modules/prettier/standalone.js
+node_modules/prettier/third-party.js
+node_modules/prettier/esm/parser-angular.mjs
+node_modules/prettier/esm/parser-babel.mjs
+node_modules/prettier/esm/parser-espree.mjs
+node_modules/prettier/esm/parser-flow.mjs
+node_modules/prettier/esm/parser-glimmer.mjs
+node_modules/prettier/esm/parser-graphql.mjs
+node_modules/prettier/esm/parser-html.mjs
+node_modules/prettier/esm/parser-markdown.mjs
+node_modules/prettier/esm/parser-meriyah.mjs
+node_modules/prettier/esm/parser-postcss.mjs
+node_modules/prettier/esm/parser-typescript.mjs
+node_modules/prettier/esm/parser-yaml.mjs
+node_modules/prettier/esm/standalone.mjs
+node_modules/prettier-plugin-tailwindcss/LICENSE
+node_modules/prettier-plugin-tailwindcss/package.json
+node_modules/prettier-plugin-tailwindcss/README.md
+node_modules/prettier-plugin-tailwindcss/dist/index.js
+node_modules/prettier-plugin-tailwindcss/dist/css/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/css/preflight.css
+node_modules/prettier-plugin-tailwindcss/dist/licenses/@ianvs/prettier-plugin-sort-imports/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/@prettier/plugin-php/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/@prettier/plugin-pug/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/@shopify/prettier-plugin-liquid/LICENSE.md
+node_modules/prettier-plugin-tailwindcss/dist/licenses/@shufo/prettier-plugin-blade/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/@trivago/prettier-plugin-sort-imports/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/escalade/license
+node_modules/prettier-plugin-tailwindcss/dist/licenses/import-fresh/license
+node_modules/prettier-plugin-tailwindcss/dist/licenses/import-from/license
+node_modules/prettier-plugin-tailwindcss/dist/licenses/import-sort-style-module/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/jsesc/LICENSE-MIT.txt
+node_modules/prettier-plugin-tailwindcss/dist/licenses/line-column/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/object-hash/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/prettier-plugin-astro/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/prettier-plugin-css-order/license.md
+node_modules/prettier-plugin-tailwindcss/dist/licenses/prettier-plugin-import-sort/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/prettier-plugin-jsdoc/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/prettier-plugin-organize-attributes/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/prettier-plugin-organize-imports/license
+node_modules/prettier-plugin-tailwindcss/dist/licenses/prettier-plugin-style-order/README.md
+node_modules/prettier-plugin-tailwindcss/dist/licenses/prettier-plugin-svelte/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/prettier-plugin-twig-melody/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/recast/LICENSE
+node_modules/prettier-plugin-tailwindcss/dist/licenses/tailwindcss/LICENSE
