--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fluent-ffmpeg": "^2.1.2",
     "http-errors": "^2.0.0",
     "jalali-moment": "^3.3.11",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
