delete music track

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "watch": "npx tailwindcss -i ./src/css/input.css -o ./src/css/main.css --watch",
+    "watch": "npx tailwindcss -i ./public/css/input.css -o ./public/css/main.css --watch",
     "build": "webpack"
   },
   "keywords": [],
